--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>8</source>
+					<target>8</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -30,14 +30,6 @@
 				<configuration>
 					<warSourceDirectory>web</warSourceDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>8</source>
-					<target>8</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -59,12 +51,12 @@
 			<artifactId>guava</artifactId>
 			<version>20.0</version>
 		</dependency>
+        <!--Apache commons 工具包-->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.8</version>
 		</dependency>
-
-
+        <!--Apache commons 工具包-->
 	</dependencies>
 </project>
