--- a/pom.xml
+++ b/pom.xml
@@ -98,5 +98,15 @@
 			<version>3.3.6</version>
 		</dependency>
 		<!--log4j2 end-->
-	</dependencies>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+		</dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+    </dependencies>
 </project>
