--- a/pom.xml
+++ b/pom.xml
@@ -108,5 +108,10 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>2.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.22.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
