--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,15 @@
             <artifactId>spring-context</artifactId>
             <version>4.3.22.RELEASE</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.5</version>
+        </dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+	</dependencies>
 </project>
